_build/doctest/output.txt
Results of doctest builder run on 2017-05-02 06:03:15
=====================================================

Document: guide
---------------
**********************************************************************
File "guide.rst", line 48, in default
Failed example:
    print t1 == t2
Exception raised:
    Traceback (most recent call last):
      File "c:\python36\lib\doctest.py", line 1330, in __run
        compileflags, 1), test.globs)
      File "c:\python36\lib\site-packages\sphinx\ext\doctest.py", line 369, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[4]>", line 1
        print t1 == t2
               ^
    SyntaxError: Missing parentheses in call to 'print'
**********************************************************************
File "guide.rst", line 50, in default
Failed example:
    print t1 == t3
Exception raised:
    Traceback (most recent call last):
      File "c:\python36\lib\doctest.py", line 1330, in __run
        compileflags, 1), test.globs)
      File "c:\python36\lib\site-packages\sphinx\ext\doctest.py", line 369, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[5]>", line 1
        print t1 == t3
               ^
    SyntaxError: Missing parentheses in call to 'print'
**********************************************************************
File "guide.rst", line 52, in default
Failed example:
    print t1.area()
Exception raised:
    Traceback (most recent call last):
      File "c:\python36\lib\doctest.py", line 1330, in __run
        compileflags, 1), test.globs)
      File "c:\python36\lib\site-packages\sphinx\ext\doctest.py", line 369, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[6]>", line 1
        print t1.area()
               ^
    SyntaxError: invalid syntax
**********************************************************************
File "guide.rst", line 54, in default
Failed example:
    print t1.scale(2.0).area()
Exception raised:
    Traceback (most recent call last):
      File "c:\python36\lib\doctest.py", line 1330, in __run
        compileflags, 1), test.globs)
      File "c:\python36\lib\site-packages\sphinx\ext\doctest.py", line 369, in compile
        return compile(code, name, self.type, flags, dont_inherit)
      File "<doctest default[7]>", line 1
        print t1.scale(2.0).area()
               ^
    SyntaxError: invalid syntax
**********************************************************************
1 items had failures:
   4 of  10 in default
10 tests in 1 items.
6 passed and 4 failed.
***Test Failed*** 4 failures.

Document: tutorial
------------------
1 items passed all tests:
   2 tests in default
2 tests in 1 items.
2 passed and 0 failed.
Test passed.

Doctest summary
===============
   12 tests
    4 failures in tests
    0 failures in setup code
    0 failures in cleanup code
